# sogis-ccc-config

./: Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
.github/workflows/: main.yml
schemas/: sogis-ccc-config.json
src/: server.py
tests/: api_tests.py
