[project]
name = "sogis-ccc-config"
version = "v2025.01.24"
description = "SO!GIS CCC config service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.0.3",
    "werkzeug~=3.0.6",
    "Flask-JWT-Extended~=4.7.1",
    "flask-restx~=1.3.0",
    "requests~=2.32.3",
    "qwc-services-core~=1.4.0"
]

[dependency-groups]
dev = [
    "flask-cors>=5.0.0",
    "python-dotenv>=1.0.1",
]
